JumpScript/tests/baselines/reference/computedPropertyNames34_ES6.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames34_ES6.jump(5,18): error TS2302: Static members cannot reference class type parameters.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames34_ES6.jump (1 errors) ====
    function foo<T>() { return '' }
    class C<T> {
        static bar() {
            var obj = {
                [foo<T>()]() { }
                     ~
!!! error TS2302: Static members cannot reference class type parameters.
            };
            return 0;
        }
    }